# proyecto-2-snies-extractor-4-beibis-1

./: CMakeLists.txt  Informe_Refactorización.md  README.md
.github/workflows/: cmake-platform.yml
src/: CMakeLists.txt  Consolidado.cpp  Consolidado.h  Gestor.h  GestorCsv.cpp  GestorCsv.h  GestorJson.cpp  GestorJson.h  GestorTXT.cpp  GestorTXT.h  ProgramaAcademico.cpp  ProgramaAcademico.h  SNIESController.cpp  SNIESController.h  Settings.cpp  Settings.h  View.cpp  View.h  main.cpp
